Change application architecture

--- a/Store.DataAccess/Store.DataAccess.csproj
+++ b/Store.DataAccess/Store.DataAccess.csproj
@@ -1,9 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFramework>net8.0</TargetFramework>
-        <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
+        <Nullable>enable</Nullable>
     </PropertyGroup>
 
     <ItemGroup>
@@ -20,7 +20,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Store.DataAccess\Store.DataAccess.csproj" />
+      <ProjectReference Include="..\Store.Models\Store.Models.csproj" />
     </ItemGroup>
 
 </Project>
