--- a/Store/Store.csproj
+++ b/Store/Store.csproj
@@ -42,4 +42,8 @@
       <AdditionalFiles Include="Areas\Customer\Views\Home\Privacy.cshtml" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="wwwroot\images\product\" />
+    </ItemGroup>
+
 </Project>
